# hexcat

./: .gitattributes  .gitignore  .mcp.json  BATCH1_PRE_IMPORT_REQUIREMENTS.md  BATCH2_PRE_IMPORT_REQUIREMENTS.md  BATCH2b_PRE_IMPORT_REQUIREMENTS.md  BATCH3_ADDENDUM_PRE_IMPORT.md  BATCH3_PRE_IMPORT_REQUIREMENTS.md  BATCH4_CORRECTION_NOTE.md  BATCH4_PRE_IMPORT_REQUIREMENTS.md  BATCH4b_PRE_IMPORT_REQUIREMENTS.md  BATCH_ARUBAOS_PROCURVE_PHASE1_MANIFEST.md  BATCH_CX6400_8400_PHASE_A_PROPOSAL.md  BATCH_CX6400_8400_PHASE_B_REQUIREMENTS.md  BATCH_FIXEDLINE_SWEEP_PRE_IMPORT_REQUIREMENTS.md  BATCH_HPE_COMWARE_SMB_PHASE1_MANIFEST.md  CISCO_AUDIT_FINDINGS.md  CISCO_B2B5_GROUNDING_MANIFEST.md  CISCO_CATEGORY_REMAP_MANIFEST.md  CISCO_FIX2_WERTLISTE_LOG.md  CISCO_PRICING_PHASE2_RESEARCH.md  CLAUDE.md  HPE_ARUBA_CATEGORY_PROPOSAL.md  HPE_ARUBA_EOL_DETERMINATIONS.md  HPE_ARUBA_FULL_COVERAGE.md  HPE_ARUBA_MERKMAL_FIT.md  JTL_E3_CATEGORIES_TO_CREATE.md  MISSION.md  PRICING_APPLY_CHANGED.csv  PRICING_APPLY_HELD.csv  PROJECT_AUDIT.md  README.md  SPECS_NEEDED_PUSH2.md  STATUS.md  SWITCHES_SCHEMA_PROPOSAL.md  coverage_report.md  pyproject.toml
_audit_export/: ANSCHLUSSTYP_DELTA.csv  ANSCHLUSSTYP_DELTA.md  FORMFAKTOR_DELTA.md  OTHER11_DELTA.md  PHASE1_CONSOLIDATED_DELTA.md  PHASE2_MANIFEST.csv  PHASE2_MANIFEST_NOTES.md
_scratch/: add_dom_backfill.py  aruba_5400r_zl2_build.py  aruba_expansion_modules_build.py  aruba_instanton_build.py  aruba_os_switch_build.py  aruba_procurve_build.py  aruba_zl_build.py  audit_semantic.py  comware_ff_modular_build.py  comware_ff_modules_build.py  comware_fixed_build.py  comware_fixed_specs.md  comware_fn_modular_build.py  dell_author.py  (+20 more)
(+2066 files in other folders)
