[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hexcat"
version = "0.1.0"
description = "HexCat — JTL-Ameise-ready CSV bundle generator for the Hexwaren product catalog (deterministic core + AI content generation)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "typer>=0.9",
    "rich>=13",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
generate = ["anthropic>=0.40"]

[project.scripts]
hexcat = "hexcat.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
