[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hexcat"
version = "0.1.0"
description = "HexCat — JTL-Ameise-ready CSV bundle generator for the Hexwaren product catalog (deterministic core + AI content generation)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "typer>=0.9",
    "rich>=13",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
# Phase 3 Stage-1 ledger engine (datasheet fetch + HTML mining + Excel workbook).
# Kept optional so the Phase 1-2 deterministic core stays dependency-light.
ledger = ["httpx>=0.27", "beautifulsoup4>=4.12", "openpyxl>=3.1", "pdfplumber>=0.11"]

[project.scripts]
hexcat = "hexcat.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
